# rules_schema_org

./: .bazelrc  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md
schemaorg/: BUILD.bazel
schemaorg/queries/: classes.rq  definitions.rq  properties.rq
